# tetrarc

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml  rio.toml  tetrarc.json  tetrarc.logging.cfg
data/: BasicTests.csv  RolesList.csv  UserList.csv  books.csv  test_groups.csv  tetrarc.db.dump.sql
tetrarc/: __init__.py  _version.py  constants.py  data_models.py  fastapi_run.py  persistence.py  theme.py
tetrarc/components/: __init__.py  booksum.py  customListRow.py  major_section.py  navbar.py  overlay_bar.py  side_component.py  sidebar.py  testGroupList.py  user_sign_up_form.py
tetrarc/pages/: app_page.py  login_page.py  pending_page.py
tetrarc/pages/app_page/: about_page.py  addresult_page.py  admin.py  book_page.py  detailresults.py  home_page.py  news_page.py
tetrarc/pages/app_page/admin/: basic_tests.py  test_books.py
tetrarc/tetrarcdb/: __init__.py  tetrarcDB.py
tetrarc/utils/: tdb.py
utils/: reloadDB.sh  tetrarc.service
